--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -18,3 +18,16 @@
 .card__like-button:hover {
   opacity: 0.6;
 }
+
+.card__like-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+}
+
+.card__likes-counter {
+  color: #000;
+  font-size: 13px;
+  text-align: center;
+}
