--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -14,6 +14,14 @@
   margin-top: 48px;
 }
 
+.popup__button:disabled {
+  border: 1px solid #000;
+  color: #000;
+  background-color: white;
+  opacity: 20%;
+  cursor: not-allowed;
+}
+
 .popup__button:hover {
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
@@ -25,3 +33,5 @@
     line-height: 17px;
   }
 }
+
+
