--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -14,6 +14,16 @@
   margin-bottom: 0;
 }
 
+.popup__error {
+  color: #ff0000;
+  font-size: 12px;
+  line-height: 100%;
+}
+
+.popup__input_type_error {
+  border-bottom: 1px solid #ff0000;
+}
+
 @media screen and (max-width: 568px) {
   .popup__title {
     font-size: 12px;
